[gd_scene load_steps=2 format=2]

[ext_resource path="res://DaySummary.gd" type="Script" id=1]

[node name="DaySummary" type="PanelContainer"]
margin_right = 233.0
margin_bottom = 184.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 226.0
margin_bottom = 177.0

[node name="DayLabel" type="Label" parent="VBoxContainer"]
margin_right = 219.0
margin_bottom = 14.0

[node name="BudgetLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 219.0
margin_bottom = 32.0

[node name="AmountSpentLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 219.0
margin_bottom = 50.0

[node name="TotalLabel" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 219.0
margin_bottom = 68.0

[node name="LossLabel" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 219.0
margin_bottom = 86.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 219.0
margin_bottom = 110.0
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
